noam updates the contact and the conversation components

--- a/src/Componentone/Chat/Chat.css
+++ b/src/Componentone/Chat/Chat.css
@@ -1,10 +1,9 @@
 
 
-.container{
+.container-chat{
     display: flex !important;
     flex-direction: row !important;
-    text-align: center !important;
-    justify-content: center !important;
+    align-items: center;
     height: 100vh  !important;
     width: 100%  !important;
 }
