--- a/src/Componentone/Contact/Contact.css
+++ b/src/Componentone/Contact/Contact.css
@@ -7,6 +7,7 @@
     cursor: pointer;
     width: 100% !important;
     padding: 14px 11px !important;
+    text-align: left;
 }
 
 
@@ -27,6 +28,9 @@
     width: 100%;
     font-size: 17px;
     color: black !important;
+    text-align: left;
+    padding-left: 7px;
+    padding-top: 2px;
 }
 
 .message {
@@ -37,4 +41,8 @@
 }
 
 .time-sent {
+    font-size: 12.5px;
+    margin-right: 9px;
+    color: rgba(0,0,0,0.41);
+    white-space: nowrap;
 }
