--- a/src/Componentone/SignIn/SignIn.css
+++ b/src/Componentone/SignIn/SignIn.css
@@ -12,8 +12,8 @@ body{
 	border-radius: 5px;
 	
 	border-color: rgba(109, 105, 105, 0.8)  ;
-	background-color: azure;
-	box-shadow: 5px,5px,5px grb(0,0,0,10);
+	background-color: rgba(109, 105, 105, 0.8);
+	box-shadow: 5px,5px,5px grb(0,0,0,.5);
 }
 
 
@@ -22,8 +22,13 @@ body{
 		height: 150px;
 		width: 150px;
 		border-radius: 50%;
-		
 		border: 2px solid rgb(153, 145, 145);
+		margin-left: 30px;
 		
 	
+}
+
+button{
+	margin: 5px;
+
 }
