--- a/src/Componentone/SignIn/SignIn.css
+++ b/src/Componentone/SignIn/SignIn.css
@@ -13,18 +13,15 @@ body{
 	width: 100%;
 	background-position: center;
 	background-size: cover;
-	position:absolute;
+	position:relative;
 }
 
 .brand_logo_container {
-    position: relative;
     height: 170px;
-    width: 170px;
-    top: -75px;
-	left: 110px;
-
-  
+    z-index: 9;
+    content: center;
 }
+
 .logo{	
     height: 150px;
     width: 150px;
@@ -32,6 +29,9 @@ body{
     border: 2px solid white;	
 }
 .form-box{
+	display: flex;
+    justify-content: center;
+    flex-direction: column;
 	justify-content: center;
 	width: 380px;
 	height: 480px;
@@ -40,7 +40,7 @@ body{
 	background: rgba(109, 105, 105, 0.8);
 	border-radius: 30px;
 	overflow: hidden;
-	position: relative;
+	position: absolute;
 }
 .button-box{
 	width: 220px;
