added features - will be updated

--- a/src/Componentone/ChatList/ChatList.css
+++ b/src/Componentone/ChatList/ChatList.css
@@ -3,8 +3,8 @@
     flex: 1.55 !important;
     flex-direction: column !important;
     height: 100% !important;
-    width: 65% !important;
-    float:left;
+    width: 100% !important;
+    float: left;
 }
 
 .profile {
@@ -25,10 +25,10 @@
     padding: 8px;
 }
 
-.search-container{
+.search-container {
     background: white;
     border-radius: 17px;
-    width:100%;
+    width: 100%;
     padding: 4px 11px;
     display: flex;
     flex-direction: row;
@@ -41,4 +41,7 @@
 
 .search-textbox {
     width: 100%;
+    outline: none;
+    font-size: 14px;
+    border: none;
 }
