made sign in as first

--- a/src/Componentone/SignInPage/SignInPage.css
+++ b/src/Componentone/SignInPage/SignInPage.css
@@ -4,7 +4,7 @@
 	font-family: sa;
 }
 body{
-	background:url(../../imgs/background.jpg) fixed;
+	background:url(../../../public/background.jpg) fixed;
 	background-size: cover;
 }
 
