--- a/src/Componentone/Chat/Chat.css
+++ b/src/Componentone/Chat/Chat.css
@@ -1,7 +1,7 @@
-.container-chat{
-    display: flex !important;
-    flex-direction: row !important;
-    align-items: center;
-    height: 100vh  !important;
-    width: 100%  !important;
+.container{
+   
+
+   
+    height: 100%  ;
+    width: 100%  ;
 }
