--- a/src/Componentone/SignInPage/SignInPage.css
+++ b/src/Componentone/SignInPage/SignInPage.css
@@ -3,7 +3,7 @@
 	padding: 0;
 }
 body{
-	background:url(../../../public/background.jpg) fixed;
+	background:url(../../../public/Design-Background.jpg) fixed;
 	background-size: cover;
 }
 
