--- a/src/Componentone/UserImage/UserImage.css
+++ b/src/Componentone/UserImage/UserImage.css
@@ -1,5 +1,5 @@
-.user-image {
-    width: 39px;
-    height: 39px;
-    border-radius: 50%;
-}
+.profile-image {
+    width: 50px;
+    height: 50px;
+    border-radius: 40px;
+  }
