--- a/src/Componentone/ChatList/ChatList.css
+++ b/src/Componentone/ChatList/ChatList.css
@@ -1,15 +1,5 @@
-body {
-  background-color: #3498db;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-rendering: optimizeLegibility;
-}
-.container {
-  margin: 60px auto;
-  background: #fff;
-  padding: 0;
-  border-radius: 7px;
-}
+
+
 
 .profile-image {
   width: 50px;
@@ -109,4 +99,10 @@ body {
 .nickname{
     padding-left: 10px;
     font-size: 17px;
+}
+
+.contact-list{
+ 
+  overflow-y: scroll;
+
 }
