--- a/src/Componentone/Chat/Chat.css
+++ b/src/Componentone/Chat/Chat.css
@@ -1,4 +1,30 @@
-.container{  
-    height: 100%  ;
-    width: 100%  ;
-}
+.container-fluid {
+    margin: 50px;
+    background: #fff;
+    padding: 0;
+    border-radius: 7px;
+    width: auto;
+    height: 90vh;
+
+   
+  }
+  .row{
+    --bs-gutter-x:0;
+    height: 90vh;
+  }
+  /* ::-webkit-scrollbar {
+    width: 5px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    width: 5px;
+    background: #f5f5f5;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    width: 1em;
+    background-color: #ddd;
+    outline: 1px solid slategrey;
+    border-radius: 1rem;
+  } */
+  
