--- a/src/Componentone/UserImage/UserImage.css
+++ b/src/Componentone/UserImage/UserImage.css
@@ -2,4 +2,14 @@
     width: 50px;
     height: 50px;
     border-radius: 40px;
+    cursor: pointer;
   }
+ 
+.big-image {
+  width: 40vh;
+  height: 40vh;
+}
+
+.header {
+  font-size: 25px;
+}
