--- a/src/Components/MessageField/MessageField.css
+++ b/src/Components/MessageField/MessageField.css
@@ -47,3 +47,40 @@
     justify-content: flex-end;
     margin: 4px 13px;
 }
+
+.link {
+    text-decoration: none;
+    color: black;
+}
+
+.file-image {
+    height: 6vh;
+    width: 6vh;
+}
+
+.file-div {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    width: 30vh;
+    max-width: 30vh;
+}
+
+.name-div {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    padding-left: 2vh;
+    font-size: 2.5vh;
+    word-wrap:break-word;
+    max-width: 25vh;
+}
+
+.file-ext {
+    position: absolute;
+    left: 0.3vh;
+    top: 0.4vh;
+    color: white;
+    font-weight: bold;
+    font-size:1.6vh;
+}
