--- a/src/Components/MessageField/MessageField.css
+++ b/src/Components/MessageField/MessageField.css
@@ -28,9 +28,29 @@
     width: 30vh;
 }
 
-.big-image {
-    width: 40vh;
-    height: 40vh;
+.picture-modal-class {
+    height: 85vh;
+    min-width: 45vw;
+}
+
+.picture-modal-width {
+    min-width: 45vw;
+}
+
+.centered-div {
+    display: flex !important;
+    justify-content: center !important;
+    text-align: center !important;
+    margin-left: 0;
+    margin-top: 0;
+}
+
+
+.big-image-field {
+    width: auto;
+    height: auto;
+    max-width: 90vw;
+    max-height: 90vh;
 }
 
 .message-not-mine {
@@ -42,6 +62,12 @@
     font-size:14.5px;
 }
 
+.photo {
+    width: auto !important;
+    height: auto !important;
+    max-height: 30vh;
+    max-width: 30vw;
+}
 .message-div-end {
     display: flex;
     justify-content: flex-end;
