--- a/src/Components/Welcome/Welcome.css
+++ b/src/Components/Welcome/Welcome.css
@@ -10,8 +10,8 @@
 }
 
 .welcome-image {
-    width: 250px;
-    height: 250px;
+    width: 30vw;
+    height: 30vh;
     border-radius: 50%;
     object-fit: contain;
 }
