--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -51,6 +51,9 @@
   font-size: 15px;
   margin-top: 2.5px;
   color: rgba(0, 0, 0, 0.4);
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .time-sent {
