--- a/src/Components/MessageField/MessageField.css
+++ b/src/Components/MessageField/MessageField.css
@@ -4,15 +4,6 @@
     margin: 4px 13px;
 }
 
-.message {
-    background: #cbe7bc;
-    padding: 7px 9px;
-    border-radius: 3px;
-    max-width: 50%;
-    color: #202020;
-    font-size:14.5px;
-}
-
 .message:after {
     content: '';
     position: absolute;
@@ -22,8 +13,8 @@
     border: 20px solid transparent;
     border-bottom: 0;
     margin-top: -10px;
-  }
-  
+}
+
 .video-message {
     width: 30vh;
 }
@@ -56,16 +47,90 @@
     max-height: 75vh;
 }
 
-#main-div {
+#main-div {}
+
+/*left*/
+.message {
+    position: relative;
+    background: #bce5a6;
+    padding: 7px 9px;
+    border-radius: 3px;
+    max-width: 50%;
+    color: #202020;
+    font-size: 14.5px;
 }
 
+/*left*/
+.message-div div::before {
+    content: '';
+    position: absolute;
+    top: 0.0vh;
+    left: -1.93vw;
+    width: 2.5vw;
+    height: 2vh;
+    /*background: linear-gradient(136deg, #71a257, 0%, #bce5a6 50%, transparent 50%, transparent);*/
+    background: linear-gradient(225deg, #bce5a6 0%, #bce5a6 50%, transparent 50%, transparent);
+}
+
+/*left*/
+.message-audio {
+    position: relative;
+    background: #bce5a6;
+    padding: 7px 9px;
+    border-radius: 3px;
+    color: #202020;
+    font-size: 14.5px;
+}
+
+/*left*/
+.message-audio div::before {
+    content: '';
+    position: absolute;
+    top: 0.1vh;
+    left: 0vw;
+    width: 1.9vw;
+    height: 2vh;
+    /*background: linear-gradient(136deg, #71a257, 0%, #bce5a6 50%, transparent 50%, transparent);*/
+    background: linear-gradient(225deg, #bce5a6 0%, #bce5a6 50%, transparent 50%, transparent);
+}
+
+/*right*/
 .message-not-mine {
+    position: relative;
     background: #ffffff;
     padding: 7px 9px;
     border-radius: 3px;
     max-width: 50%;
     color: #202020;
-    font-size:14.5px;
+    font-size: 14.5px;
+}
+
+/*right*/
+.message-div-end {
+    display: flex;
+    justify-content: flex-end;
+    margin: 4px 13px;
+}
+
+/*left*/
+.message-div-end div::before {
+    content: '';
+    position: absolute;
+    top: 0vh;
+    right: -1.93vw;
+    width: 2.5vw;
+    height: 3vh;
+    background: linear-gradient(136deg, #ffffff 0%, #ffffff 50%, transparent 50%, transparent);
+}
+
+/*right*/
+.message-not-mine-audio {
+    position: relative;
+    background: #ffffff;
+    padding: 7px 9px;
+    border-radius: 3px;
+    color: #202020;
+    font-size: 14.5px;
 }
 
 .photo {
@@ -73,11 +138,6 @@
     height: auto !important;
     max-height: 30vh;
     max-width: 30vw;
-}
-.message-div-end {
-    display: flex;
-    justify-content: flex-end;
-    margin: 4px 13px;
 }
 
 .link {
@@ -102,9 +162,8 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
-    padding-left: 2vh;
     font-size: 2.1vh;
-    word-wrap:break-word;
+    word-wrap: break-word;
     max-width: 34vh;
 }
 
@@ -114,21 +173,13 @@
     top: 0.4vh;
     color: white;
     font-weight: bold;
-    font-size:1.6vh;
+    font-size: 1.6vh;
 }
 
-.message-audio {
-    background: #cbe7bc;
-    padding: 7px 9px;
-    border-radius: 3px;
-    color: #202020;
-    font-size:14.5px;
+.empty {
+    padding-left: 0.8vw;
 }
 
-.message-not-mine-audio {
-    background: #ffffff;
-    padding: 7px 9px;
-    border-radius: 3px;
-    color: #202020;
-    font-size:14.5px;
+.right-message {
+    padding-right: 0.8vw;
 }
