--- a/src/Components/ChatList/ChatList.css
+++ b/src/Components/ChatList/ChatList.css
@@ -15,7 +15,7 @@
 
 }
 .settings-tray {
-  height: 9.77vh;
+  /* height: 9.77vh; */
   background: #eee;
   padding: 10px 15px;
   border-top-left-radius: 7px;
