--- a/src/Components/SignInPage/SignInPage.css
+++ b/src/Components/SignInPage/SignInPage.css
@@ -1,6 +1,7 @@
 * {
 	margin: 0;
 	padding: 0;
+	
 }
 
 body {
@@ -25,7 +26,7 @@ body {
 	height: 380px;
 	position: relative;
 	margin: 6% auto;
-	background: rgba(193, 190, 207, 0.384);
+	background: rgba(86, 85, 95, 0.384);
 	border-radius: 30px;
 	overflow: hidden;
 }
@@ -50,6 +51,7 @@ body {
 	position: absolute;
 	box-shadow: 0 0 20px 9px rgba(105, 105, 109, 0.8);
 	border-radius: 30px;
+	
 
 }
 
@@ -60,6 +62,7 @@ body {
 	border: none;
 	outline: none;
 	position: relative;
+	color: rgb(255, 255, 255);
 }
 
 #btn {
@@ -71,6 +74,7 @@ body {
 	background: linear-gradient(to right, #241a5a, rgb(59, 60, 110));
 	border-radius: 30px;
 	transition: .5s;
+	color: rgb(255, 255, 255);
 }
 
 .submit-btn {
@@ -86,4 +90,5 @@ body {
 	margin: 5px auto;
 	bottom: -65px;
 	content: center;
+	color: rgb(255, 255, 255);
 }
