fix - entering long messages - shows it good

--- a/src/Components/MessageField/MessageField.css
+++ b/src/Components/MessageField/MessageField.css
@@ -47,7 +47,10 @@
     max-height: 75vh;
 }
 
-#main-div {}
+#main-div {
+    max-width: 50% !important;
+    word-wrap: break-word;
+}
 
 /*left*/
 .message {
