fixed width of audio, and login shows correctly

--- a/src/Components/MessageField/MessageField.css
+++ b/src/Components/MessageField/MessageField.css
@@ -136,6 +136,10 @@
     font-size: 14.5px;
 }
 
+.audio {
+    max-width: 33vw;
+}
+
 .photo {
     width: auto !important;
     height: auto !important;
