fix adding file so it can work

--- a/src/Components/MessageField/MessageField.css
+++ b/src/Components/MessageField/MessageField.css
@@ -76,6 +76,18 @@
 }
 
 /*left*/
+#file-div::before {
+    content: '';
+    position: absolute;
+    top: -10px;
+    left: -32px;
+    width: 12px;
+    height: 12px;
+    /*background: linear-gradient(136deg, #71a257, 0%, #bce5a6 50%, transparent 50%, transparent);*/
+    background: linear-gradient(225deg, #bce5a6 0%, #bce5a6 50%, transparent 50%, transparent);
+}
+
+/*left*/
 .message-audio {
     position: relative;
     background: #bce5a6;
@@ -126,6 +138,18 @@
     background: linear-gradient(136deg, #ffffff 0%, #ffffff 50%, transparent 50%, transparent);
 }
 
+
+/*left*/
+.message-d-end div::before {
+    content: '';
+    position: absolute;
+    top: -0px;
+    right: -11px;
+    width: 12px;
+    height: 12px;
+    background: linear-gradient(136deg, #ffffff 0%, #ffffff 50%, transparent 50%, transparent);
+}
+
 /*right*/
 .message-not-mine-audio {
     position: relative;
@@ -157,12 +181,11 @@
     width: 6vh;
 }
 
-.file-div {
+#file-div {
     position: relative;
     display: flex;
     flex-direction: row;
-    width: 39vh;
-    max-width: 39vh;
+    max-width: 25vw;
 }
 
 .name-div {
@@ -172,11 +195,12 @@
     font-size: 2.1vh;
     word-wrap: break-word;
     max-width: 34vh;
+    padding-left: 4px;
 }
 
 .file-ext {
     position: absolute;
-    left: -5px;
+    left: 1px;
     top: 0.4vh;
     color: white;
     font-weight: bold;
@@ -189,4 +213,70 @@
 
 .right-message {
     padding-right: 2px;
+}
+
+.message-d {
+    display: flex;
+    justify-content: flex-start;
+    margin: 4px 13px;
+}
+
+/*right*/
+.message-d-end {
+    display: flex;
+    justify-content: flex-end;
+    margin: 4px 13px;
+}
+
+/*left*/
+.message-father {
+    position: relative;
+    background: #bce5a6;
+    padding: 7px 9px;
+    margin-left: 14px;
+    border-radius: 3px;
+    width: 25vw;
+    color: #202020;
+    font-size: 14.5px;
+}
+
+/*right*/
+.message-not-mine-father {
+    position: relative;
+    background: #ffffff;
+    padding: 7px 9px;
+    margin-right: 14px;
+    border-radius: 3px;
+    width: 25vw;
+    color: #202020;
+    font-size: 14.5px;
+}
+
+a {
+    width: 25vw !important;
+}
+
+#file-div-end {
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: row;
+    max-width: 25vw;
+}
+
+.file-end {
+    display: flex !important;
+}
+
+.file-begin {
+    display: flex !important;
+    justify-content: flex-start !important;
+}
+
+.empty-file {
+}
+
+.right-message-file {
+    display: flex;
+    justify-content: end;
 }
